# rhc

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
rhc/: __init__.py  __main__.py  cli.py  config.py  context.py  scanner.py  scoring.py  types.py
rhc/checks/: __init__.py  base.py  ci.py  deps.py  docs.py  hygiene.py  security.py  tests.py
rhc/renderers/: __init__.py  base.py  json.py  md.py  text.py
tests/: conftest.py  test_checks.py  test_renderers.py  test_scanner.py
